# fARM64

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md
docs/: API.md  DESIGN.md  ENCODING.md  REMAINING_EXTENSIONS.md  ROADMAP.md  VALIDATION.md
examples/: disasm.rs
src/: decoder.rs  enums.rs  error.rs  features.rs  info.rs  instruction.rs  lib.rs  mnemonic.rs  operand.rs  register.rs  sysop.rs  sysreg.rs
src/decode/: apple.rs  bits.rs  branch_sys.rs  dp_imm.rs  dp_reg.rs  ldst.rs  ldst_simd.rs  mod.rs  mops.rs
src/decode/simd_fp/: crypto.rs  mod.rs  scalar_fp.rs  simd_arith.rs  simd_data.rs
src/decode/sme/: mod.rs  sme2.rs  sme_lut.rs  sme_za_move.rs  sme_zero_movt.rs
src/decode/sve/: mod.rs  sve_fp.rs  sve_int.rs  sve_lut.rs  sve_mem.rs  sve_perm.rs
src/encode/: apple.rs  bits.rs  branch_sys.rs  dp_imm.rs  dp_reg.rs  ldst.rs  ldst_simd.rs  mod.rs  mops.rs  simd_fp.rs  simd_fp_arith.rs  simd_fp_crypto.rs  simd_fp_data.rs  simd_fp_scalar.rs  sme.rs  sve.rs
src/encode/sve/: imp.rs
src/encode/sve/imp/: fp.rs  int.rs  int_sve2.rs  mem.rs  mem_enc.rs  mem_forms.rs  perm.rs
src/format/: fmt_writer.rs  gnu.rs  mod.rs
src/tables/: mod.rs  names.rs  sysins.rs
tests/: apple_amx_gxf.rs  golden.rs  h4_hardening.rs  hbc_pauthlr.rs  j_hardening.rs  k4_gaps.rs  llvm_diff.rs  lsfe_atomics.rs  lsui_atomics.rs  multivec_convert_p.rs  neon_fmmla.rs  neon_overdecode_k2.rs  neon_overdecode_l2.rs  overdecode_l4.rs  overdecode_m.rs  overdecode_n.rs  pauth_lr_sppc.rs  reg_info.rs  roundtrip.rs  simd_fp_matmul.rs  sme2_g3.rs  sme2_multivec_q.rs  sme_k3.rs  sme_l3.rs  sme_luti6_s.rs  sme_outerproduct_h2.rs  sme_zals_i1.rs  sme_zero_movt_r2.rs  sve2p1_g2.rs  sve_fcvtzn_o.rs  sve_h3.rs  sve_mem_i2.rs  sve_neon_gaps_i3.rs  sve_overdecode_k1.rs  sve_overdecode_l1.rs  sve_pred_r1.rs  system_ext_t.rs  the_atomics.rs
tests/common/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
